Try another decode method - Base64